test/files/pos/byname-implicits-31/Main_2.scala
// scalac: -Ycheck:all
object Test {
  util.lazily[Ping]
}
