test/files/neg/macro-incompatible-macro-engine-b/Test_3.scala
// scalac: -Ymacro-debug-lite
object Test extends App {
  Macros.foo
  Macros.foo
}
